# robot-car

./: .gitignore  README.md
comms submodule stuff/: bbt_wbt 2104.docx
comms submodule stuff/i2c attempt/i2cstuff/: i2cstuff.c
graphs/: 2_20_002.txt  3-2-_01.txt  5-3-_1.txt  5-5-_01.txt  5-5-_1.txt  pid.txt  plotPID.py
individual/comms/i2c attempt/: main.m5f
individual/comms/i2c attempt/i2cstuff/: CMakeLists.txt
individual/comms/uart_advanced/: CMakeLists.txt  uart_advanced.c
individual/mapping/: all.txt  conversion.txt  maze_test.py  mazefinder_final.c  pytoC.py
individual/ultrasonic & accelerometer/: CMakeLists.txt
individual/ultrasonic & accelerometer/accelerometer/: CMakeLists.txt  accelerometer.c  kalman.c  kalman.h
individual/ultrasonic & accelerometer/ultrasonic/: kalman.c  ultrasonic.c  ultrasonic.h
mapping theory/: README memory loss.txt  csvify_maze.py  maze.csv  maze.py  mazefinder_pre_relative.c
motor/pico/motorcontrol/: CMakeLists.txt  motorcontrol.c
msp432/: .ccsproject  .cproject  .project  main.c
msp432/.launches/: robot-car.launch
msp432/encoder/: encoder.c  encoder.h
msp432/motor/: motor.c  motor.h  pid.c  pid.h
msp432/serial/: serial.c  serial.h
pico/: CMakeLists.txt  main.c
pico/InfraredSensor/: CMakeLists.txt  README.md  infraredMain.c
pico/accelerometer/: CMakeLists.txt  accelerometer.c  accelerometer.h
pico/comms/: CMakeLists.txt  README.md  comms.c  comms.h  demo.c  main.m5f  uiFlowCode.txt
pico/encoder/: CMakeLists.txt  encoder.c  encoder.h
pico/infrared/: CMakeLists.txt  README.md  infrared.c
pico/motor/: CMakeLists.txt  README.md  motor.c  motor.h  pid.c  pid.h
pico/navigation/: CMakeLists.txt  README.md  mapping.c  mappinggod.h  movement.c  movement.h  movementsensing.c  navigation.c
pico/ultrasonic/: CMakeLists.txt  ultrasonic.c  ultrasonic.h
ultrasonic & accelerometer/: README.md  main.c
ultrasonic & accelerometer/accelerometer/: accelerometer.h  movingAverageFilter.c  movingAverageFilter.h
ultrasonic & accelerometer/ultrasonic/: CMakeLists.txt  kalman.h
